[metadata]
name = CNP
version = 0.4.7
description = Capacity NFT Platform Python API Core
author = Robert Kaiser
author_email = robert@capacity.at
url = https://bitbucket.org/capacitybox/cnp-backend-core/

[options]
packages = cnp
install_requires =
    PyYAML
    web3>=5.30.0, <6
    flask
    flask-cors
    Flask-Mail
    flasgger
    gevent
    ujson
    eciespy
    cryptography
